<resources>
    <string name="app_name">Send Anything</string>
    <string name="send">Send File</string>
    <string name="ip">IP Address of Server</string>
    <string name="port">Port of Server</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="receive">Receive File</string>
    <string name="sending">Sending</string>
    <string name="receiving">Receiving</string>
    <string name="sent">Sent</string>
    <string name="name_of_received_file">Name for received file as filename.extension</string>
    <string name="listening_at">Listening at %s \n Use this IP address on the computer app where it asks for client IP</string>
    <string name="received">Received</string>
    <string name="task_failed">%s failed</string>
</resources>
